# Unbounded-Korean

./: .gitignore  Cargo.toml  LICENSE
benches/: korean_pipeline.rs
crates/g2pk/: Cargo.toml
crates/g2pk-py/: Cargo.toml
crates/g2pk-py/src/: lib.rs
crates/g2pk/src/: english.rs  error.rs  g2p.rs  hangul.rs  lib.rs  morph.rs  numerals.rs  resources.rs  rules.rs
crates/hangulize-py/: Cargo.toml
crates/hangulize-py/src/: lib.rs
crates/hangulize-rs/: Cargo.toml  build.rs
crates/hangulize-rs/src/: lib.rs
crates/hangulize-rs/src/specs/: eng.hsl  spa.hsl
crates/korean_phonemizer/: Cargo.toml
crates/korean_phonemizer-py/: Cargo.toml
crates/korean_phonemizer-py/src/: lib.rs
crates/korean_phonemizer/src/: lib.rs
crates/unbounded-korean-py/: Cargo.toml  pyproject.toml
crates/unbounded-korean-py/src/: lib.rs
docs/plans/: 2026-07-14-english-hangulize-plan.md  2026-07-14-g2pk-rs-complete-port-plan.md  2026-07-14-separated-pyo3-and-hangulize-rs-plan.md  2026-07-14-unbounded-korean-umbrella-plan.md
docs/requirements/: 2026-07-14-english-hangulize.allium  2026-07-14-g2pk-rs-complete-port.allium  2026-07-14-separated-pyo3-and-hangulize-rs.allium  2026-07-14-unbounded-korean-umbrella.allium
docs/specs/: 2026-07-14-english-hangulize-design.md  2026-07-14-g2pk-rs-complete-port-design.md  2026-07-14-separated-pyo3-and-hangulize-rs-design.md  2026-07-14-unbounded-korean-umbrella-design.md
src/: lib.rs
tests/: compat.rs  hangulize_cases.rs  reference_cases.rs  umbrella.rs
