[workspace]
members = [
    ".",
    "crates/g2pk",
    "crates/korean_phonemizer",
    "crates/korean_phonemizer-py",
    "crates/hangulize-rs",
    "crates/hangulize-py",
    "crates/g2pk-py",
    "crates/unbounded-korean-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
g2pk = { path = "crates/g2pk" }
korean_phonemizer = { path = "crates/korean_phonemizer" }
hangulize-rs = { path = "crates/hangulize-rs" }
once_cell = "=1.21.4"
regex = "=1.12.4"
thiserror = "=2.0.18"
lindera = { version = "=2.3.4", features = ["embed-ko-dic", "embed-ipadic"] }
pyo3 = { version = "=0.22.6" }
rsepitran = { git = "https://github.com/dmort27/epitran.rs.git", package = "rsepitran" }
criterion = "=0.8.2"
anyhow = "1.0.98"
rustfst = "1.1.6"
unicode-normalization = "0.1.25"
serde_json = "1.0.150"
pinyin = "=0.11.0"
misaki-rs = { version = "=0.3.0", default-features = false }

[package]
name = "unbounded-korean"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "unbounded_korean"

[dependencies]
g2pk.workspace = true
korean_phonemizer.workspace = true
hangulize-rs.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "korean_pipeline"
harness = false
