[package]
name = "hangulize-py"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "hangulize_rs"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
hangulize-rs.workspace = true
pyo3.workspace = true
