[package]
name = "hangulize-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hangulize_rs"

[dependencies]
once_cell.workspace = true
pinyin.workspace = true
regex.workspace = true
lindera.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
serde_json.workspace = true
