[package]
name = "korean_phonemizer-py"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "korean_phonemizer"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
korean_phonemizer.workspace = true
pyo3.workspace = true
