[package]
name = "unbounded-korean-py"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "unbounded_korean"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
g2pk.workspace = true
korean_phonemizer.workspace = true
hangulize-rs.workspace = true
pyo3.workspace = true
